--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -3,16 +3,31 @@
      -fx-background-color: black;
 }
 .label {
-    -fx-font-size: 12px;
+    -fx-font-size: 20px;
     -fx-font-weight: bold;
-    -fx-text-fill: #333333;
+    -fx-text-fill: #000000;
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 } 
 /*use title.setId("welcome-text"); in code*/
-#welcome-text {
-   -fx-font-size: 32px;
+#gameOver-text {
+   -fx-font-size: 50px;
+   -fx-font-weight: bold;
+   -fx-font-family: "Arial";
+   -fx-text-fill: #ff0000;
+   -fx-effect: innershadow( three-pass-box , rgba(255,0,0,0.7) , 6, 0.0 , 0 , 2 );
+}
+#health-text {
+   -fx-font-size: 20px;
+   -fx-font-weight: bold;
    -fx-font-family: "Arial Black";
-   -fx-fill: #818181;
+   -fx-fill: #ffffff;
+   -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
+}
+#score-text {
+   -fx-font-size: 20px;
+   -fx-font-weight: bold;
+   -fx-font-family: "Arial Black";
+   -fx-fill: #ffffff;
    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 6, 0.0 , 0 , 2 );
 }
 #actiontarget {
